--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <base href="/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bootcamp Front End</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
